# arco-worker

./: go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/arco-worker/: main.go
internal/worker/app/: cloud_metadata.go  cloud_metadata_test.go  controlplane.go  local_api.go  local_api_test.go  local_state.go  runner.go  runner_test.go  tasklogrelay.go  terminal_agent.go  terminal_agent_test.go
internal/worker/runtime/: containerd.go  containerd_linux.go  containerd_linux_test.go  containerd_test.go  containerd_unsupported.go  docker.go  docker_test.go  exec.go  exec_test.go  output_writer.go  output_writer_test.go  runtime.go  workspace.go  workspace_git_test.go  workspace_test.go
internal/worker/shutdown/: aws.go  config.go  config_test.go  detectors_test.go  gcp.go  monitor.go
internal/worker/terminal/: manager.go  manager_test.go
proto/arcoloom/worker/v1/: worker.proto
scripts/: publish_registry_artifacts.py
